--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container container-flex">
             <h1>EBAC Motors</h1>
             <div class="menu-hamburguer">
                 <span></span>
@@ -45,6 +45,118 @@
         <img src="./images/slide2.png" alt="Bmw">
         <img src="./images/slide3.png" alt="Ford">
     </div>
+    <section id="sobre-a-loja">
+        <div class="container container-flex">
+            <img src="./images/loja.jpg" alt="Loja">
+            <div>
+                <h2>Sobre a loja</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quibusdam consequatur consequuntur rem pariatur iure ea delectus impedit, ducimus magnam quo fuga quis, dolorum ullam facilis facere nesciunt voluptatem. Cum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quibusdam consequatur consequuntur rem pariatur iure ea delectus impedit, ducimus magnam quo fuga quis, dolorum ullam facilis facere nesciunt voluptatem. Cum.</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Em destaque</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>Lorem ipsum dolor sit amet consect</p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>Lorem ipsum dolor sit amet consect</p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>Lorem ipsum dolor sit amet consect</p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Promoções</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>Lorem ipsum dolor sit amet consect</p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>Lorem ipsum dolor sit amet consect</p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>Lorem ipsum dolor sit amet consect</p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Entre em contato</h2>
+            <form>
+                <div class="form-campo">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="form-campo">
+                    <label for="telefone">Telefone</label>
+                    <input type="tel" id="telefone">
+                </div>
+                <div class="form-campo">
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="form-campo">
+                    <label for="veiculo-interesse">Veículo de interesse</label>
+                    <input type="text" id="veiculo-interesse">
+                </div>
+                <div class="form-campo">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem">
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -53,6 +165,9 @@
         $(document).ready(function() {
             $('#carousel-imagens').slick({
                 autoplay: true 
+            })
+            $('.menu-hamburguer').click(function() {
+                $('nav').slideToggle()
             })
         })
     </script>
