--- a/index.html
+++ b/index.html
@@ -129,47 +129,59 @@
         </div>
     </section>
 
-    <section>
+    <section id="contato">
         <div class="container">
             <h2>Entre em contato</h2>
             <form>
                 <div class="form-campo">
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome">
+                    <input type="text" id="nome" name="nome">
                 </div>
                 <div class="form-campo">
                     <label for="telefone">Telefone</label>
-                    <input type="tel" id="telefone">
+                    <input type="tel" id="telefone" name="telefone">
                 </div>
                 <div class="form-campo">
                     <label for="email">Email</label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" name="email">
                 </div>
                 <div class="form-campo">
                     <label for="veiculo-interesse">Veículo de interesse</label>
-                    <input type="text" id="veiculo-interesse">
+                    <input type="text" id="veiculo-interesse" name="veiculoInteresse">
                 </div>
                 <div class="form-campo">
                     <label for="mensagem">Mensagem</label>
-                    <textarea id="mensagem">
+                    <textarea name="mensagem" name="mensagem"></textarea>
                 </div>
-                <button type="submit">Enviar</button>
+                <button id="botao-enviar" type="submit">Enviar</button>
             </form>
         </div>
     </section>
+    <footer>
+        <div class="container container-flex">
+            <p>
+                2023 &copy; EBAC Motors - Todos os direitos reservados
+            </p>
+            <ul class="container-flex">
+                <li>
+                    <a href=""><img src="./icones/facebook.png" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="./icones/instagram.png" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="./icones/youtube.png" alt=""></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#carousel-imagens').slick({
-                autoplay: true 
-            })
-            $('.menu-hamburguer').click(function() {
-                $('nav').slideToggle()
-            })
-        })
-    </script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
